# spec-parser

./: .gitignore  FAQ.md  README.md  customlogging.py  driver.py  genindex.html  index.html  input_spec  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  runparams.py  searchindex.js  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
_sources/md_docs/: getting_started.md.txt
apidocs/: spec_parser.html
docs/: conf.py  error_checks.md  getting_started.md  index.rst  requirements.txt
docs/apidocs/: modules.rst  spec-parser.rst  spec_parser.rst
docs/getting_started/: getting_started.md  grammar.md  internals.md
docs/md_docs/: error_checks.md  getting_started.md  internals.md
grammar/: Class.txt  Profile.txt  Regex.txt  Type.txt
md_docs/: error_checks.html  getting_started.html  grammar.html  internals.html
sample_input/: MyClass.md
spec-parser/: __init__.py  helper.py  parser.py  spec_parser.py
spec_parser/: __init__.py  __main__.py  __version__.py  config.py  helper.py  jsondump.py  loaders.py  main.py  mdparsing.py  mkdocs.py  model.py  owl_to_context.py  parser.py  plantuml.py  rdf.py  redirects.py  runparams.py  singlefile.py  spec_parser.py  tex.py  util.py  utils.py  webpages.py  word.py
spec_parser/templates/: class.md.j2  class_properties.md.j2  property.md.j2  vocab.md.j2
spec_parser/templates/default/: class.md.j2  datatype.md.j2  page.md.j2  property.md.j2  vocab.md.j2  vocabulary.md.j2
spec_parser/templates/mkdocs/: class.md.j2  datatype.md.j2  hierarchy.md.j2  individual.md.j2  namespace.md.j2  page.md.j2  property.md.j2  vocabulary.md.j2
spec_parser/templates/singlefile/: class.md.j2  individual.md.j2  namespace.md.j2  page.md.j2  property.md.j2  vocabulary.md.j2
spec_parser/templates/tex/: class.tex.j2  datatype.tex.j2  entity.tex.j2  individual.tex.j2  namespace.tex.j2  property.tex.j2  vocabulary.tex.j2
spec_parser/templates/word/: SPDX-ISO-Word-template.docx  class.md.j2  datatype.md.j2  namespace.md.j2
src/: __init__.py  __version__.py  config.py  config.py   driver.py  helper.py  lexer.py  parser.py  parser_class.py  parser_profile.py  parser_type.py  spec_parser.py  utils.py
src/md_spec_parser/: __main__.py  jsondump.py  main.py  mkdocs.py  plantuml.py  runparams.py
src/md_spec_parser/templates/mkdocs/: class.md.j2  individual.md.j2  namespace.md.j2
