[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "spec_parser"
version = "0.0.12"
dependencies = [
    "isodate",
    "Jinja2",
    "MarkupSafe",
    "pyparsing",
    "rdflib",
    "six",
    "sly",
]

[project.scripts]
spec-parser = "spec_parser.__main__:main"

[tool.setuptools.package-data]
"spec_parser.templates" = ["*.j2"]
