[metadata]
name = spec_parser
version = 0.0.2

[options]
packages = spec_parser
include_package_data = True
install_requires =
    isodate
    Jinja2
    MarkupSafe
    pyparsing
    rdflib
    six
    sly

[options.entry_points]
console_scripts =
    spec-parser = spec_parser.__main__:main

[options.package_data]
spec_parser = *.j2
